k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: get-converted-exams
  labels:
    name: get-converted-exams
