k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: get-converted-exams-service
  namespace: get-converted-exams
  labels:
    app: get-converted-exams
spec:
  selector:
    app: get-converted-exams
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
